--- a/Juego/mainwindow.ui
+++ b/Juego/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
-    <height>447</height>
+    <width>667</width>
+    <height>434</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -30,7 +30,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
+      <y>300</y>
       <width>71</width>
       <height>22</height>
      </rect>
@@ -46,7 +46,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>180</y>
+      <y>230</y>
       <width>22</width>
       <height>61</height>
      </rect>
@@ -64,14 +64,24 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>250</y>
+      <x>120</x>
+      <y>340</y>
       <width>61</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>RUN</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/shoot.PNG</normaloff>:/imagenes/shoot.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>71</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QGraphicsView" name="graphicsView">
@@ -80,7 +90,7 @@
       <x>20</x>
       <y>0</y>
       <width>601</width>
-      <height>241</height>
+      <height>281</height>
      </rect>
     </property>
     <property name="verticalScrollBarPolicy">
@@ -99,8 +109,8 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>310</y>
+      <x>310</x>
+      <y>350</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -109,34 +119,54 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>70</y>
-      <width>75</width>
-      <height>23</height>
+      <x>140</x>
+      <y>250</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>PLAY</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/start.PNG</normaloff>:/imagenes/start.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>160</y>
-      <width>75</width>
-      <height>23</height>
+      <x>300</x>
+      <y>250</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>SALIR</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/exit.PNG</normaloff>:/imagenes/exit.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdNumber_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>310</y>
+      <x>220</x>
+      <y>350</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -146,46 +176,76 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>130</y>
-      <width>75</width>
-      <height>23</height>
+      <y>200</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>USER</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/signin.png</normaloff>:/imagenes/signin.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>100</y>
-      <width>75</width>
-      <height>23</height>
+      <x>300</x>
+      <y>150</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>START GAME</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/start.PNG</normaloff>:/imagenes/start.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>130</y>
-      <width>75</width>
-      <height>23</height>
+      <x>300</x>
+      <y>200</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>1 VS 1</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/1vs1.PNG</normaloff>:/imagenes/1vs1.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>290</y>
+      <x>230</x>
+      <y>330</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -197,8 +257,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>290</y>
+      <x>320</x>
+      <y>330</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -210,8 +270,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>290</y>
+      <x>420</x>
+      <y>330</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -223,8 +283,8 @@
    <widget class="QLCDNumber" name="lcdNumber_3">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>310</y>
+      <x>400</x>
+      <y>350</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -234,7 +294,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>290</y>
+      <y>330</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -247,7 +307,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>310</y>
+      <y>360</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -260,7 +320,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>100</y>
+      <y>170</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -269,34 +329,54 @@
    <widget class="QPushButton" name="REGISTRARVS">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>190</y>
-      <width>75</width>
-      <height>23</height>
+      <x>300</x>
+      <y>290</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>USERS</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/signin.png</normaloff>:/imagenes/signin.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="disparovs">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>280</y>
+      <x>110</x>
+      <y>290</y>
       <width>61</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>RUN</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/shoot.PNG</normaloff>:/imagenes/shoot.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>71</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2JUGADOR1">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>40</y>
+      <x>210</x>
+      <y>110</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -305,8 +385,8 @@
    <widget class="QLineEdit" name="lineEdit_3JUGADOR2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>40</y>
+      <x>350</x>
+      <y>110</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -316,7 +396,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>20</y>
+      <y>90</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -328,8 +408,8 @@
    <widget class="QLabel" name="label_6JUGADOR2">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>20</y>
+      <x>390</x>
+      <y>90</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -407,7 +487,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>300</y>
       <width>101</width>
       <height>41</height>
@@ -433,27 +513,47 @@
    <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>350</y>
-      <width>75</width>
-      <height>23</height>
+      <x>480</x>
+      <y>340</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>GUARDAR</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/save.PNG</normaloff>:/imagenes/save.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_8">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>350</y>
-      <width>75</width>
-      <height>23</height>
+      <x>570</x>
+      <y>340</y>
+      <width>71</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>CARGAR</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="imagenes.qrc">
+      <normaloff>:/imagenes/load.PNG</normaloff>:/imagenes/load.PNG</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>75</width>
+      <height>160</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="reiniciar">
@@ -482,6 +582,26 @@
      <string>NIVEL</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_fondo">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>-8</y>
+      <width>661</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="imagenes.qrc">:/imagenes/Mesadetrabajo 4.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>label_fondo</zorder>
    <zorder>graphicsView</zorder>
    <zorder>potencia</zorder>
    <zorder>angulo</zorder>
@@ -524,7 +644,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>601</width>
+     <width>667</width>
      <height>21</height>
     </rect>
    </property>
@@ -540,6 +660,8 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="imagenes.qrc"/>
+ </resources>
  <connections/>
 </ui>
